fix: centerStage overflow causing diary to be visible while closed

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -29,5 +29,6 @@
   align-items: center;
   justify-content: center;
   overflow-y: auto;
+  overflow-x: hidden;
   position: relative;
 }
